tests/specs/ecosystem/bacon/lib/1_0_0.test
bacon/lib/1.0.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/useSearch.ts:4:7
  | 
4 | const useSearch = <T>({
  |       ^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/useLocalStorage.ts:4:25
  | 
4 | export default function useLocalStorage<T>(key: string, initialValue: T) {
  |                         ^^^^^^^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/useForm.ts:13:7
   | 
13 | const useForm = ({
   |       ^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/copyToClipboard.ts:1:7
  | 
1 | const copyToClipboard = (textToCopy: string) => {
  |       ^^^^^^^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


